--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-      "php": "7.1.8",
+      "php": "~7.2.1",
       "heroku/heroku-buildpack-php": "*"
     },
     "require-dev": {
